--- a/airline/src/main/resources/application.yaml
+++ b/airline/src/main/resources/application.yaml
@@ -3,3 +3,12 @@ spring:
     name: airline
 server:
   port: 8090    
+logging:
+  level:
+    org.springframework.web: DEBUG 
+eureka:
+  client:
+    service-url: 
+      defaultZone: http://localhost:8761/eureka
+    refresh:
+      enable: false  
