--- a/currency-conversion-factor/src/main/resources/application.yaml
+++ b/currency-conversion-factor/src/main/resources/application.yaml
@@ -1,8 +1,10 @@
 spring:
   application:
     name: conversionFactor
+server:
+  port: 8087 
   datasource:    url: jdbc:h2:mem:conversionFactor
     username: sa
-    password: password  
+    password: password
 
     
