--- a/currency-conversion-factor/src/main/resources/application.yaml
+++ b/currency-conversion-factor/src/main/resources/application.yaml
@@ -1,10 +1,14 @@
 spring:
   application:
     name: conversionFactor
-server:
-  port: 8087 
-  datasource:    url: jdbc:h2:mem:conversionFactor
-    username: sa
-    password: password
+logging:
+  level:
+    org.springframework.web: DEBUG 
+eureka:
+  client:
+    service-url: 
+      defaultZone: http://localhost:8761/eureka
+    refresh:
+      enable: false
 
     
