--- a/currency-conversion-factor/src/main/resources/application.yaml
+++ b/currency-conversion-factor/src/main/resources/application.yaml
@@ -4,11 +4,8 @@ spring:
 logging:
   level:
     org.springframework.web: DEBUG 
-eureka:
-  client:
-    service-url: 
-      defaultZone: http://localhost:8761/eureka
-    refresh:
-      enable: false
-
-    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*" 
