--- a/currency-conversion-factor/pom.xml
+++ b/currency-conversion-factor/pom.xml
@@ -61,10 +61,10 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>		
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-		</dependency>	
+		</dependency> -->	
 			
 	</dependencies>
 
