--- a/currency-converter/src/main/resources/application.yaml
+++ b/currency-converter/src/main/resources/application.yaml
@@ -6,9 +6,9 @@ server:
 logging:
   level:
     org.springframework.web: DEBUG 
-eureka:
-  client:
-    service-url: 
-      defaultZone: http://localhost:8761/eureka
-    refresh:
-      enable: false  
+#eureka:
+#  client:
+#    service-url: 
+#      defaultZone: http://localhost:8761/eureka
+#    refresh:
+#      enable: false  
